crates/ruff_python_parser/tests/snapshots/invalid_syntax@aug_assign_stmt_invalid_value.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
assertion_line: 118
input_file: crates/ruff_python_parser/resources/inline/err/aug_assign_stmt_invalid_value.py
---
## AST

```
Module(
    ModModule {
        range: 0..77,
        body: [
            AugAssign(
                StmtAugAssign {
                    range: 0..13,
                    target: Name(
                        ExprName {
                            range: 0..1,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        ExprStarred {
                            range: 5..13,
                            value: BoolOp(
                                ExprBoolOp {
                                    range: 6..13,
                                    op: And,
                                    values: [
                                        Name(
                                            ExprName {
                                                range: 6..7,
                                                id: "a",
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 12..13,
                                                id: "b",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                StmtAugAssign {
                    range: 14..27,
                    target: Name(
                        ExprName {
                            range: 14..15,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        ExprStarred {
                            range: 19..27,
                            value: Yield(
                                ExprYield {
                                    range: 20..27,
                                    value: Some(
                                        Name(
                                            ExprName {
                                                range: 26..27,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                StmtAugAssign {
                    range: 28..46,
                    target: Name(
                        ExprName {
                            range: 28..29,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        ExprStarred {
                            range: 33..46,
                            value: YieldFrom(
                                ExprYieldFrom {
                                    range: 34..46,
                                    value: Name(
                                        ExprName {
                                            range: 45..46,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                StmtAugAssign {
                    range: 47..64,
                    target: Name(
                        ExprName {
                            range: 47..48,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Starred(
                        ExprStarred {
                            range: 52..64,
                            value: Lambda(
                                ExprLambda {
                                    range: 53..64,
                                    parameters: Some(
                                        Parameters {
                                            range: 60..61,
                                            posonlyargs: [],
                                            args: [
                                                ParameterWithDefault {
                                                    range: 60..61,
                                                    parameter: Parameter {
                                                        range: 60..61,
                                                        name: Identifier {
                                                            id: "x",
                                                            range: 60..61,
                                                        },
                                                        annotation: None,
                                                        convention: AstParamConvention {
                                                            ownership: Borrow,
                                                            mutability: Immutable,
                                                        },
                                                    },
                                                    default: None,
                                                },
                                            ],
                                            vararg: None,
                                            kwonlyargs: [],
                                            kwarg: None,
                                        },
                                    ),
                                    body: Name(
                                        ExprName {
                                            range: 63..64,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            AugAssign(
                StmtAugAssign {
                    range: 65..71,
                    target: Name(
                        ExprName {
                            range: 65..66,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    op: Add,
                    value: Name(
                        ExprName {
                            range: 70..71,
                            id: "y",
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 75..76,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            range: 75..76,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x += *a and b
  |       ^^^^^^^ Syntax Error: Boolean expression cannot be used here
2 | x += *yield x
3 | x += *yield from x
  |


  |
1 | x += *a and b
2 | x += *yield x
  |       ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | x += *yield from x
4 | x += *lambda x: x
  |


  |
1 | x += *a and b
2 | x += *yield x
3 | x += *yield from x
  |       ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | x += *lambda x: x
5 | x += y := 1
  |


  |
2 | x += *yield x
3 | x += *yield from x
4 | x += *lambda x: x
  |       ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
5 | x += y := 1
  |


  |
3 | x += *yield from x
4 | x += *lambda x: x
5 | x += y := 1
  |        ^^ Syntax Error: Expected a statement
  |
